--- a/2 Theorie/2.1.1 Aggressivität.tex
+++ b/2 Theorie/2.1.1 Aggressivität.tex
@@ -4,12 +4,12 @@
 Aggressivität ist nicht gleichzusetzen mit Aggression. Ersteres bezieht sich auf eine überdauernde Disposition eines Individuums zu aggressivem Verhalten. Diese Bereitschaft wird nich immer offen ausgeführt und ist unterschiedlich ausgeprägt
 \parencite{Def_unterscheidung_Springer, Def_Aggressivität_Duden, Def_Aggressivität_Spektrum}. Aggressivität entspricht demzufolge einer Verhaltenstendez, einer übergeordnete Charaktereigenschaft, die sich in Form von Aggression oder aggressivem Verhalten zeigt. Personen, die Aggressivität als Teil ihrer Persönlichkeit haben, können beispielsweise die folgenden Charakteristika aufweisen \parencite{Def_Aggressivität_eng1}:
 \begin{enumerate} [leftmargin=1.25cm] 
-      \item Problematik die Emotionen und Gedanken anderer zu verstehen und nachzuempfinden
+      \item Problematik, die Emotionen und Gedanken anderer zu verstehen und nachzuempfinden
       \item externe Attribution
       \item Soziale Manipulation, um das Bedürfnis von Kontrolle über andere 
             Personen zu befriedigen
-      \item Emotionale und affektive Defizite zeigen sich durch Aggressivität auf Grund einer fehlerhaften Wahnehmung von fehlender Wertschätzung anderer
-      \item Aggressive Personen sind der Meinung, dass sie für ihre Verwandten oder nahestehenden Menschen nicht wichtig sind
+      \item Emotionale und affektive Defizite, die sich durch Aggressivität auf Grund einer fehlerhaften Wahnehmung fehlender Wertschätzung Anderer zeigen
+      \item Fehlerhafte Meinung, dass sie für ihre Verwandten oder nahestehenden Menschen nicht wichtig sind
 \end{enumerate}
 
 %Aggression
