--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -58,16 +58,16 @@ Die Entscheidung, die Fallvignetten zu Beginn zu präsentieren, diente dazu, das
 
 Durch das Onlinemedium konnte kein Einfluss auf Störvariablen erfolgen. Es war den Teilnehmern selbst überlassen unter welchen Bedingungen sie an der Studie teilnehmen. Durch die abschließende Nachfrage der sinngemäßen Bearbeitung kann davon ausgegangen werden, dass es keine zu großen Störvariablen bei der Durchführung gab. Durch einen fehlenden Versuchsleiter entfielen dessen Effekte, wie zum Beispiel, dass sich ein Proband dadruch beobachtet fühlen kann. Dies führt zu objektiveren Datenerhebungen. Dennoch konnte keine aktive Kontrolle der möglichen Störvariablen erfolgen.
 
-Zusammenfassend kann man die Erhebung der Daten durch die standardisierten Fragebögen und durch die Manipulationschecks als valide einstufen. Dennoch sollte bei einer erneuten Untersuchung auf eine verbesserte Randomisierung der Variablen, innerhalb der Fallvignetten sowieauch der Fragebögen geachtet werde. 
+Zusammenfassend kann man die Erhebung der Daten durch die standardisierten Fragebögen und durch die Manipulationschecks als valide einstufen. Dennoch sollte bei einer erneuten Untersuchung auf eine verbesserte Randomisierung der Variablen, innerhalb der Fallvignetten sowie der Fragebögen geachtet werde. 
 
 
 \section{Ausblick}    \label{sec_5.4}
 In diesem abschließenden Kapitel werden die Konsequenzen und Folgen der gewonnenen Erkenntnisse genannt. Des Weiteren wird auf einen weiteren Forschungsbedarf hingewiesen.
 
-Die zu Beginn aufgeworfene Frage, eines möglichen Zusammenhangs zwischen der Aggression der Probanden und ihrer Akzeptanz der Mythen häuslicher Gewalt sowie ihrer Tendenz zum Victim Blaming, kann abschließend teilwese zugestimmt werden. Das Ausmaß an Aggression hängt mit der Akzeptanz der Mythen häuslicher Gewalt zusammen. Weiter zeigt eine explorative Post$-$hoc Analyse, dass die vier Subskalen der Aggression ebenfalls mit der DVMAS zusammenhängen. Jedoch korreliert, im Rahmen einer weiteren Post$-$hoc Analyse, nur eine Subskala der Aggression, die physische Aggression, mit der Verantwortungszuschreibung auf das Opfer. Auch der vermutete Interaktionseffekt des Geschlechts zwischen Aggression und Gewaltmythenakzeptanz ist nicht gegeben. 
+Die zu Beginn aufgeworfene Frage, eines möglichen Zusammenhangs zwischen der Aggression der Probanden und ihrer Akzeptanz der Mythen häuslicher Gewalt sowie ihrer Tendenz zum Victim Blaming, kann abschließend teilwese zugestimmt werden. Das Ausmaß an Aggression hängt mit der Akzeptanz der Mythen häuslicher Gewalt zusammen. Weiter zeigt eine explorative Post$-$hoc Analyse, dass die vier Subskalen der Aggression ebenfalls mit der DVMAS zusammenhängen. Jedoch korreliert, im Rahmen dieser Post$-$hoc Analyse, nur eine Subskala der Aggression, die physische Aggression, mit der Verantwortungszuschreibung auf das Opfer. Auch der vermutete Effekt des Geschlechts auf den Zusammenhang zwischen Aggression und Gewaltmythenakzeptanz ist nicht gegeben. 
 
 %Fragebogen validieren
-Der im Rahmen des Projektes verwendete Fragebogen zur Erhebung der Akzeptanz der Mythen häuslicher Gewalt ist zu dem Zeitpunkt dieser Verschriftlichung bislang noch nicht validiert worde. Da es sich lediglich um eine sinngemäße Übersetzung des Originals von \textcite{Peters2003} handelt, kann davon ausgegangen werden, dass sich die Validität, Reliabilität und Objektivität nicht ausschlaggebend davon unterscheiden. Aus diesem Grund wird die Validität dieser Arbeit in Bezug auf die DVMAS als gut geschätzt. Dennoch sollte eine Validierung der deutschen Übersetzung erfolgen und anschließend gegebenenfalls eine erneute Untersuchung der, im Rahmen dieser Bachelorthesis, aufgestellten Hypothesen bezüglich der DVMAS durchgeführt werden. 
+Der im Rahmen des Projektes verwendete Fragebogen zur Erhebung der Akzeptanz der Mythen häuslicher Gewalt ist gis zu dem Zeitpunkt dieser Verschriftlichung noch nicht validiert worden. Da es sich lediglich um eine sinngemäße Übersetzung des Originals von \textcite{Peters2003} handelt, kann davon ausgegangen werden, dass sich die Validität, Reliabilität und Objektivität nicht ausschlaggebend davon unterscheiden. Aus diesem Grund wird die Validität dieser Arbeit in Bezug auf die DVMAS als gut geschätzt. Dennoch sollte eine Validierung der deutschen Übersetzung erfolgen und anschließend gegebenenfalls eine erneute Untersuchung der, im Rahmen dieser Bachelorthesis, aufgestellten Hypothesen bezüglich der DVMAS durchgeführt werden. 
 
 %viel mehr infos und weiterbildung muss sein (Mythen)
 Die Ergebnisse zeigen, dass in Bezug auf die Gewaltmythen die Gesellschaft noch weiter aufgeklärt werden muss. Der Originalfragebogen stammt aus dem Jahr 2003 und ist somit an die 20 Jahre alt. Dennoch sind die Mythen noch stark verbreitet, was durch unsere Stichprobe ersichtlich ist. Im Rahmen der Aufklärung sollte ein Fokus auf die männliche Bevölkerung gesetzs werden, da sie diese Mythen vermehrt akzeptieren. Zudem sollten auch verhaltensauffällige Kinder und Jugendliche über dieses Thema aufgeklärt werden, da sich vor allem in den Jugendjahren große Teile des Selbst entwickeln \parencite{H1_Entwicklung}.
@@ -80,7 +80,7 @@ Daran anschließend sollten die Themen dieser Arbeit in einer repräsentativen S
 % meine explos können falsch positiv sein, deshalb nochmal prüfen
 % h3 wegen hetero kein valides Ergebnis, deshalb nochmal prüfen, weil beide prädiktoren haben hoch signifikatne haupteffekte und wegen hetero vielleicht fälschlicherweise nicht sig
 % themen von h1 nochmal prüfen, weil VicBlame net normalverteilt und dadurch vielleicht falsche schlüsse
-Die im Rahmen dieser Bachelorthesis durchgeführten Analysen sollten zur Validierung erneut und gegebenenfalls mit einer größeren Stichprobe nochmals erhoben werden. Zum Einen dient dies der Überprüfung der möglicherweise falsch positiven Post$-$hoc Analysen, zum Anderen einer potentiellen Verifikation der Hypothesenbefunde. Darüber hinaus kann somit eine vollständige Randomisierung aller Variablen ermöglicht werden. Somit würden die Variablen innerhalb der Fallvignetten randomisiert werden. Zusätzlich kann somit die Reihenfolge der im Fragebogen enthaltenden vier Bausteine (Fallvignetten, DVMAS, Deutscher Aggressionsfragebogen und sozidemographische Daten) zufällig festgelegt werden. 
+Die im Rahmen dieser Bachelorthesis durchgeführten Analysen sollten zur Validierung erneut und gegebenenfalls mit einer größeren Stichprobe nochmals erhoben werden. Zum Einen dient dies der Überprüfung der möglicherweise falsch positiven Post$-$hoc Analysen, zum Anderen einer potentiellen Verifikation der Hypothesenbefunde. Darüber hinaus kann somit eine vollständige Randomisierung aller Variablen ermöglicht werden. Somit würden die Variablen innerhalb der Fallbeispiele randomisiert werden. Zusätzlich kann somit die Reihenfolge der im Fragebogen enthaltenden vier Bausteine (Fallvignetten, DVMAS, Deutscher Aggressionsfragebogen und sozidemographische Daten) zufällig festgelegt werden. 
 
 
 % abschließendes Fazit (i guess)
