--- a/Quellen.bib
+++ b/Quellen.bib
@@ -413,7 +413,7 @@ Kapitel aus Buch: als incollection, chapter=title & title=booktitle, geht nicht 
   publisher      = {University of Maine},
   title       = {The domestic violence myth acceptance scale: Development and psychometric testing of a new instrument},
   year        = {2003},
-  note        = {(Unveröffentlichte Dissertation)}
+  note        = {(Dissertation)}
 }
 
 @article{H2_u_3_Bhogal_2016,
@@ -455,7 +455,7 @@ Kapitel aus Buch: als incollection, chapter=title & title=booktitle, geht nicht 
   publisher  = {International Islamic University},
   title   = {The relationship between exposure to domestic violence, victim blaming and aggressive behaviour among malysian adolescents},
   year    = {2012},
-  note         = {Unveröffentlichte Masterarbeit},
+  note         = {(Unveröffentlichte Masterarbeit)},
 }
 
 @article{Cohen_1992,
