--- a/SRH_Vorlage.tex
+++ b/SRH_Vorlage.tex
@@ -86,6 +86,6 @@
 
 \printbibliography[heading=bibintoc,title={Literaturverzeichnis}]
 \input{Anhang.tex}
-%\clearpage
+\clearpage
 \input{Ehrenwörtliche Erklärung.tex}
 \end{document}
