--- a/2 Theorie/Theorie.tex
+++ b/2 Theorie/Theorie.tex
@@ -5,7 +5,7 @@ In diesem Kapitel werden zunächst die verwendeten Konstrukte Aggressivität und
 
 % 2.1 Konstrukte:
 \section{Konstrukte}    \label{sec_2.1}
-Im Anschluss erfolgt in den Unterkapiteln eine Einführung in die einzelnen Konstrukte. Beginnend werden in Kapitel~\ref{subsec_2.1.1} Aggressivität und Aggression erläutert und dessen Unterschied zur Gewalt verdeutlicht. Anschließend erfolgt eine Vorstellung verschiedener Arten von Aggression und Theorien, die versuchen, die Entstehung von Aggression zu erklären. In Kapitel ~\ref{subsec_2.1.2} wird häusliche Gewalt mit ihren Mustern und Arten präsentiert. Dieses Unterkapitel geht anschließend auf mögliche Ursachen und Aufrechterhaltung sowie auf die Folgen von Gewalt ein. Inhalt dieses Kapitels ist auch eine kurze Erläuterung bezüglich der Erfüllung des Artikel 13 der Istambul Konvention \parencite{Istambul_Konvention}. Im abschließenden Kapitel ~\ref{subsec_2.1.3} Gewaltmythen wird auf diesen Begriff und das Victim Blaming eingegangen.
+Im Anschluss erfolgt in den Unterkapiteln eine Einführung in die einzelnen Konstrukte. Beginnend werden in Kapitel~\ref{subsec_2.1.1} Aggressivität und Aggression erläutert und ihr Unterschied zur Gewalt verdeutlicht. Anschließend erfolgt eine Vorstellung verschiedener Arten von Aggression und Theorien, die versuchen, die Entstehung von Aggression zu erklären. In Kapitel ~\ref{subsec_2.1.2} wird häusliche Gewalt mit ihren Mustern und Arten präsentiert. Dieses Unterkapitel geht anschließend auf mögliche Ursachen und Aufrechterhaltung sowie auf die Folgen von Gewalt ein. Inhalt dieses Kapitels ist auch eine kurze Erläuterung bezüglich der Erfüllung des Artikel 13 der Istambul Konvention \parencite{Istambul_Konvention}. Im abschließenden Kapitel ~\ref{subsec_2.1.3} Gewaltmythen wird auf diesen Begriff und das Victim Blaming eingegangen.
 
 \input{2 Theorie/2.1.1 Aggressivität.tex}
 \input{2 Theorie/2.1.2 Häusliche Gewalt.tex}
@@ -13,7 +13,7 @@ Im Anschluss erfolgt in den Unterkapiteln eine Einführung in die einzelnen Kons
 
 % 2.2 Theoretischer Hintergrund: Aktueller Forschungsstand
 \section{Aktueller Forschungsstand}   \label{sec_2.2}
-In dieser Studie wird folgende Frage untersucht: Welchen Zusammenhang gibt es zwischen Aggression und der Akzeptanz der Mythen sowie der Tendez zum Victim Blaming? 
+In dieser Studie wird folgende Frage untersucht: Gibt es einen Zusammenhang zwischen Aggression und der Akzeptanz der Mythen sowie der Tendez zum Victim Blaming? 
 
 In den folgenden drei Unterkapiteln ~\ref{subsec_2.2.1} Hypothese 1, ~\ref{subsec_2.2.2} Hypothese 2 und ~\ref{subsec_2.2.3} Hypothese 3 erfolgt die Herleitung der zu untersuchenden Hypothesen auf Basis bereits bestehender Befunde.
 
